// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comoponents/rhs_card/RhsCard should match on post when no plugin defining card types 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <div
        className="info-card"
      >
        <Connect(Markdown) />
      </div>
      <div
        className="d-flex post-card--info"
      >
        <div
          className="post-card--post-by overflow--ellipsis"
        >
          <FormattedMessage
            defaultMessage="Message by {avatar} {user}"
            id="rhs_card.message_by"
            values={
              Object {
                "avatar": <Memo(Connect(PostProfilePicture))
                  compactDisplay={false}
                  post={
                    Object {
                      "create_at": 1542994995740,
                      "id": "123",
                      "message": "test",
                      "props": Object {},
                      "type": "test",
                    }
                  }
                />,
                "user": <Memo(Connect(UserProfile))
                  disablePopover={true}
                  hideStatus={true}
                />,
              }
            }
          />
        </div>
        <div
          className="post-card--view-post"
        >
          <Link
            className="post__permalink"
            onClick={[Function]}
            to="undefined/pl/123"
          >
            <FormattedMessage
              defaultMessage="Jump"
              id="rhs_card.jump"
            />
          </Link>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`comoponents/rhs_card/RhsCard should match on post when plugin defining card types don't match with the post type 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <div
        className="info-card"
      >
        <Connect(Markdown) />
      </div>
      <div
        className="d-flex post-card--info"
      >
        <div
          className="post-card--post-by overflow--ellipsis"
        >
          <FormattedMessage
            defaultMessage="Message by {avatar} {user}"
            id="rhs_card.message_by"
            values={
              Object {
                "avatar": <Memo(Connect(PostProfilePicture))
                  compactDisplay={false}
                  post={
                    Object {
                      "create_at": 1542994995740,
                      "id": "123",
                      "message": "test",
                      "props": Object {},
                      "type": "test",
                    }
                  }
                />,
                "user": <Memo(Connect(UserProfile))
                  disablePopover={true}
                  hideStatus={true}
                />,
              }
            }
          />
        </div>
        <div
          className="post-card--view-post"
        >
          <Link
            className="post__permalink"
            onClick={[Function]}
            to="undefined/pl/123"
          >
            <FormattedMessage
              defaultMessage="Jump"
              id="rhs_card.jump"
            />
          </Link>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`comoponents/rhs_card/RhsCard should match on post when plugin defining card types match with the post type 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <component
        post={
          Object {
            "create_at": 1542994995740,
            "id": "123",
            "message": "test",
            "props": Object {},
            "type": "test",
          }
        }
      />
      <div
        className="d-flex post-card--info"
      >
        <div
          className="post-card--post-by overflow--ellipsis"
        >
          <FormattedMessage
            defaultMessage="Message by {avatar} {user}"
            id="rhs_card.message_by"
            values={
              Object {
                "avatar": <Memo(Connect(PostProfilePicture))
                  compactDisplay={false}
                  post={
                    Object {
                      "create_at": 1542994995740,
                      "id": "123",
                      "message": "test",
                      "props": Object {},
                      "type": "test",
                    }
                  }
                />,
                "user": <Memo(Connect(UserProfile))
                  disablePopover={true}
                  hideStatus={true}
                />,
              }
            }
          />
        </div>
        <div
          className="post-card--view-post"
        >
          <Link
            className="post__permalink"
            onClick={[Function]}
            to="undefined/pl/123"
          >
            <FormattedMessage
              defaultMessage="Jump"
              id="rhs_card.jump"
            />
          </Link>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`comoponents/rhs_card/RhsCard should match when no post is selected 1`] = `<div />`;
